@@ -2,6 +2,7 @@
 * Client: new TextUI commands ("arm", "unarm", "armed") help to secure your stealth addresses' scan-keys
 * Client: the balance of all the wallets gets pre-cached while opening UTXO database
 * Client: setting "Memory.NoCacheBefore" to a high value (e.g. 300000) can now quite much lower mem usage
+* Client: "NoCacheBefore" can have a negative value, that will define an offset from the highest known block
 * Further refactor of the code
 
 0.9.14 - 2014-05-13 (1.0.0-rc2)
